--- a/wp-content/themes/adelle-theme/style.css
+++ b/wp-content/themes/adelle-theme/style.css
@@ -5959,6 +5959,7 @@ h1#main-page-title {
     padding: 10px 0;
     margin: 0;
     color: white;
+    max-width: 80%;
     font-size: 0.875rem; }
     @media all and (min-width: 720px) {
       .single-modal h2 {
@@ -5986,7 +5987,7 @@ h1#main-page-title {
       height: 100%; }
   .single-modal.reveal-modal {
     height: auto;
-    min-height: none; }
+    min-height: 1px; }
     .single-modal.reveal-modal .close-reveal-modal {
       background-color: black;
       padding: 2px 10px; }
